--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "node build/dev-server.js",
-    "dev": "ulimit -n 10240 2>/dev/null; node build/dev-server.js"
+    "dev": "ulimit -n 10240 2>/dev/null; node build/dev-server.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "@tonejs/midi": "^2.0.27",
